enhancement(#180): adjusted tests